@media tag to fix picture issues on small screen, added source to report file

--- a/PortfolioTA/css/animations.css
+++ b/PortfolioTA/css/animations.css
@@ -5,4 +5,22 @@
 .pointer {
   cursor: pointer;
 }
+/*Source*/
 /*https://www.solodev.com/blog/web-design/how-to-create-boxes-with-a-distinct-hover-effect.stml*/
+
+
+
+/*Make headshot an adequate size on mobile through media query*/
+
+@media only screen and (max-width: 600px) {
+  .headshot {
+    width: 60%;
+    height: auto;
+  }
+}
+@media only screen and (min-width: 600px) {
+  .headshot {
+    width: 30%;
+    height: auto;
+  }
+}
